# arya-agent

./: .env  pyproject.toml  requirements.txt
src/: __init__.py  agent_service.py  bff_client.py  config.py  course_generator.py  curriculum.py  dashboard.py  main.py  models.py  ollama_client.py
